# stackhpc-inspector-plugins

./: .gitignore  .travis.yml  README.rst  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: tag-and-release.yml
stackhpc_inspector_plugins/: __init__.py  conf.py  utils.py
stackhpc_inspector_plugins/plugins/: base_physnet.py  ib_physnet.py  lag_physnet.py  port_speed_physnet.py  pxe_physnet.py  system_name_llc.py  system_name_physnet.py
stackhpc_inspector_plugins/tests/unit/: test_plugins_base_physnet.py  test_plugins_ib_physnet.py  test_plugins_lag_physnet.py  test_plugins_port_speed_physnet.py  test_plugins_pxe_physnet.py  test_plugins_system_name_llc.py  test_plugins_system_name_physnet.py  test_utils.py
