[metadata]
name = stackhpc-inspector-plugins
summary = StackHPC plugins for OpenStack ironic inspector
description-file = README.rst
author = StackHPC Ltd
author-email = mark@stackhpc.com
home-page = https://github.com/stackhpc/stackhpc-inspector-plugins
license = Apache-2
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2

[files]
packages =
    stackhpc_inspector_plugins

[entry_points]
ironic_inspector.hooks.processing =
    system_name_physnet = stackhpc_inspector_plugins.plugins.system_name_physnet:SystemNamePhysnetHook
    system_name_llc = stackhpc_inspector_plugins.plugins.system_name_llc:SystemNameLocalLinkConnectionHook
